-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0 Beta 1
-
None
-
Reproduced on Ubuntu 12.04, 64bit and Win7.
-
74230f126be4d7d6d6a91892ddb91bf050a46396
1) Compile and run the example code;
2) Observe how cursor never changes to Qt::SizeBDiagCursor
int main( int argc, char ** argv ) { QApplication app(argc, argv); app.setOverrideCursor(QCursor(Qt::SizeBDiagCursor)); QLabel w1; w1.setGeometry(300,300,400,400); //w1.setCursor(QCursor(Qt::SizeBDiagCursor)); w1.setText("Test widget"); w1.show(); return app.exec(); }
I suppose that during the execution there should be a call to QCursor *QGuiApplication::overrideCursor() function to retrieve the current cursor, but it never gets called.
For Gerrit Dashboard: QTBUG-27535 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
37167,2 | Fix setting custom cursor for widgets and windows before showing them | master | qt/qtbase | Status: MERGED | +2 | 0 |